--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,12 @@ html, body {
   padding: 0;
 }
 
+app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 mat-sidenav-layout {
   background: rgba(0,0,0,0.03);
 }
